--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">GoT - Challenge</string>
     <string name="title_activity_home">Game of Thrones</string>
     <string name="action_settings">Settings</string>
+    <string name="action_search">Search</string>
 
 </resources>
