--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="action_settings">Settings</string>
     <string name="action_search">Search</string>
 
+    <string name="transition_shared_image">transition_shared_image</string>
 </resources>
