--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
     <string name="app_name">GoT - Challenge</string>
     <string name="title_activity_home">Game of Thrones</string>
     <string name="action_settings">Settings</string>
-    <string name="action_search">Search</string>
+    <string name="action_search">Search character</string>
 
-    <string name="transition_shared_image">transition_shared_image</string>
+    <string name="transition_shared_character">transition_shared_character</string>
+    <string name="transition_shared_house">transition_shared_house</string>
 </resources>
